2000-03-01  Laurent Pautet  <pautet@scapin.enst.fr>

	* README, INSTALL: Replace @gnat_version@ and @glade_version@ with
 	__gnat_version__ and __glade_version__.

2000-02-02  Laurent Pautet  <pautet@scapin.enst.fr>

	* README: Update supported platforms (remove SGI and add HPUX with 
	restrictions).

2000-01-31  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in, configure: Define AR and RM for non-GNU make
 	(HPUX).

2000-01-28  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in, configure: Remove macros specific to GNU make in
 	order to avoid bug reports of users using other make tools.


2000-01-24  Laurent Pautet  <pautet@scapin.enst.fr>

	* NEWS: Add a paragraph on multi-protocols feature.
	
	* configure.in: Allow to configure rshcmd and rshopt. Needed for
	HPUX. Update Makefile.in accordingly.

1999-11-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in, configure: Split BOOT_SERVER default value into
 	two default values, DEFPROTOCOLNAME and DEFPROTOCOLDATA because
 	the default protocol name can be used independantly from the
 	default protocol data. Fix a bug in the computation of the default
 	protocol - a list of protocol was assigned and not the first
 	element of the list. 

	* MANIFEST: Add Garlic/s-garthi.adb.

1999-09-17  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in, configure: Add a flag to force zlib installation.
  	First, we want to test this installation when the zip library is
 	already present on the system (skip this optimization). Second,
 	the system zip lib may be inconsistent with the glade one.

1999-09-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* MANIFEST: Remove s-garloc.adb, s-garloc.ads, s-gartyp.adb and
	add s-gaprob.adb, s-gaprob.ads.

1999-08-22  Laurent Pautet  <pautet@scapin.enst.fr>

	* MANIFEST: Add usage.ad[bs] needed for makeusg.adb.

1999-06-30  Laurent Pautet  <pautet@scapin.enst.fr>

	* NEWS: Update with the new features and the bug fixes since
 	glade-3.11.
