@@ -162,6 +162,7 @@ Examples/Reconnection/rci_3.ads
 Examples/Reconnection/reconnection.cfg
 Garlic/5bgtplsp.ads
 Garlic/5egtplsp.ads
+Garlic/5hgarcon.ads
 Garlic/5lgarcon.ads
 Garlic/5sgarcon.ads
 Garlic/5sgtplsp.ads
